Archive2/da/7890c9e6d2fe51/output
main.cpp: In function 'int main()':
main.cpp:28:46: error: '_mm_shuffle_epi8' was not declared in this scope
  __m128i z_low  = _mm_shuffle_epi8(y,mask_low);
                                              ^
